app/components/shared/post-preview/post-preview.css
.preview {
  font-size: 0.9rem;

  h1,
  h2 {
    margin-top: 1rem;
    scroll-margin: 5rem;
    word-break: break-word;
    border-bottom: 1px solid;
    padding-bottom: 0.5rem;
    font-size: 1.5rem;
    font-weight: 600;
    letter-spacing: -0.02em;
  }

  h3 {
    margin-top: 2rem;
    scroll-margin: 5rem;
    word-break: break-word;
    font-size: 1.25rem;
    font-weight: 600;
    letter-spacing: -0.02em;
  }

  h4,
  h5 {
    margin-top: 2rem;
    scroll-margin: 5rem;
    word-break: break-word;
    font-size: 1.125rem;
    font-weight: 600;
    letter-spacing: -0.02em;
  }

  h6 {
    margin-top: 2rem;
    scroll-margin: 5rem;
    word-break: break-word;
    font-size: 1rem;
    font-weight: 600;
    letter-spacing: -0.02em;
  }

  a {
    font-weight: 500;
    text-decoration: underline;
    text-underline-offset: 4px;
  }

  p {
    line-height: 1.75;
    margin-top: 1.5rem;
  }

  ul {
    margin: 1.5rem 0;
    margin-left: 1.5rem;
    list-style-type: disc;
  }

  ol {
    margin: 1.5rem 0;
    margin-left: 1.5rem;
    list-style-type: decimal;
  }

  li {
    margin-top: 0.5rem;
  }

  blockquote {
    margin-top: 1.5rem;
    border-left: 2px solid;
    padding-left: 1.5rem;
    font-style: italic;
  }

  strong {
    background: linear-gradient(to bottom, transparent, transparent, #fef08a);
    background-size: 100% 100%;
    background-repeat: no-repeat;
    padding: 0 0.25rem;
    text-align: center;
    font-weight: bold;
  }

  img {
    border-radius: 0.375rem;
  }

  hr {
    margin: 1rem 0;
  }

  table {
    margin: 1rem 0;
    width: 100%;
  }

  tr {
    margin: 0;
    border-top: 1px solid;
    padding: 0;
  }

  th {
    border: 1px solid;
    padding: 0.5rem 1rem;
    text-align: left;
    font-weight: bold;
  }

  td {
    border: 1px solid;
    padding: 0.5rem 1rem;
    text-align: left;
  }

  code:not(:has(span)) {
    margin: 0 0.25rem;
    border-radius: 0.25rem;
    background-color: #d4d4d4;
    padding: 0.25rem;
    font-weight: bold;
  }

  code > pre {
    margin: 1rem 0;
    overflow-x: auto;
    border-radius: 0.5rem;
    padding: 1rem;
  }

  .line {
    display: inline;
    padding-bottom: 0;
  }

  .diff {
    display: inline-block;
    width: 100%;
  }

  .diff.add {
    background-color: rgba(0, 255, 0, 0.2);
  }

  .diff.add::before {
    content: '+';
    color: green;
    margin-right: 0.5rem;
  }

  .diff.remove {
    background-color: rgba(255, 0, 0, 0.2);
  }

  .diff.remove::before {
    content: '-';
    color: red;
    margin-right: 0.5rem;
  }

  .highlighted {
    display: inline-block;
    width: 100%;
    background-color: #555;
  }

  .diff:before {
    position: absolute;
    left: 2.5rem;
  }

  .has-focused .line {
    filter: blur(0.095rem);
  }

  .has-focused .focused {
    filter: blur(0);
  }
}

